--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,38 @@
+@font-face {
+  font-family: norse-bold;
+  src: url(./Norse-Bold.otf);
+}
+
 body {
   display: flex;
+  margin: 0;
+  height: 100vh;
 }
 
 .container-left {
   display: flex;
   flex-direction: column;
   background: center/cover url("bg.jpg");
+  color: white;
+  align-items: center;
+  justify-content: space-between;
+  width: 600px;
+}
+
+.banner {
+  margin-top: 128px;
+  background: hsla(0, 0%, 0%, 60%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 16px 0;
+}
+
+.banner-title {
+  font-family: norse-bold;
+  font-size: 4rem;
+}
+
+.bg-footer a:link, .bg-footer a:visited {
   color: white;
 }
