Add red outline to password fields and add drop shadow to focused field

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,3 +121,14 @@ button:active {
   transform: scale(0.95);
   background: hsl(90, 50%, 20%);
 }
+
+.error {
+  border: 1px solid red;
+  border-radius: 2px;
+}
+
+input:focus {
+  border: 1px solid black;
+  border-radius: 2px;
+  box-shadow: 2px 2px 4px gray;
+}
